--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,20 +6,20 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Create a Review:</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="game_title">Game Title:</label>
+        <input class="form-input" type="text" id="game_title" name="game_title" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
+        <label for="user_score">Rating:</label>
+        <input class="form-input" type="number" id="user_score" name="user_score" />
       </div>
       <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+        <label for="Review">Review:</label>
+        <textarea class="form-input" id="Review" name="Review"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -27,17 +27,17 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if Review.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3>Current Reviews:</h3>
 
-    {{#each projects as |project|}}
+    {{#each Review as |Review|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a href="/project/{{Review.id}}">{{Review.Review}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{Review.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
@@ -46,3 +46,5 @@
 </div>
 
 <script src="./js/profile.js"></script>
+<script src="./js/game.js"></script>
+
