--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,23 @@
 <!-- Loop over each object in the review array -->
-{{#each Games as |Games| }}
+{{#each games as |game| }}
 <div class="card">
   <div class="card-image">
     <figure class="image is-4by3">
-      <img class="has-ration" width="640" height="360" src="{{displayData.Games.game_image}}" alt="Placeholder image">
+      <img class="has-ration" width="640" height="360" src="{{game.image}}" alt="Placeholder image">
     </figure>
   </div>
   <div class="card-content">
     <div class="media">
       <div class="media-content">
-        <p class="title is-4">{{Games.game_title}}</p>
-        <p class="subtitle is-6">{{Games.metacritic}}</p>
+        <p class="title is-4">{{game.name}}</p>
+        <p class="subtitle is-6">{{game.metacritic}}</p>
       </div>
     </div>
     <div class="content">
-     {{Games.game_description}}.
+      {{game.description}}
       <a href="/review">Checkout some reviews!</a>
       <br>
-      <p> Released: {{games.release_date}}
+      <p> Released: {{game.released}}
     </div>
   </div>
 </div>
