--- a/views/reviewDetail.handlebars
+++ b/views/reviewDetail.handlebars
@@ -1,6 +1,14 @@
-<div class="col-md-6">
-    <h3>Game Review | {{game_title}}</h3>
-
-    {{!-- Review data here... --}}
-    {{Review}}
-</div>
+{{#each reviews as |review|}}
+  <div class='card review-cards'>
+    <div class='card-header'>
+      <div class='media'>
+        <div class='media-content'>
+          <p class='title is-4'>{{game_title}}</p>
+        </div>
+      </div>
+      <div class='card-content'>
+        <p> Review: {{reviews}} </p>
+      </div>
+    </div>
+  </div>
+{{/each}}
