--- a/views/new-review.handlebars
+++ b/views/new-review.handlebars
@@ -1,5 +1,35 @@
+<div class='container review-container'>
+  <div class='notification is-info' id='create-title'>
+    <h2> Add a Review! </h2>
+  </div>
+  <form class='form new-review-form'>
+    <div class='form-group'>
+      <label for='game_title'>Game Title:</label>
+      <input class='form-input' type='text' id='game_title' name='game_title' />
+    </div>
+    <div class='form-group'>
+      <label for='user_score'>Rating:</label>
+      <input
+        class='form-input'
+        type='number'
+        id='user_score'
+        name='user_score'
+      />
+    </div>
+    <div class='form-group'>
+      <label for='Review'>Review:</label>
+      <textarea class='form-input' id='Review' name='Review'></textarea>
+    </div>
+    <div class='form-group'>
+      <button type='submit' class='button is-danger'>Create</button>
+    </div>
+  </form>
+</div>
+
+<script src='/js/new-review.js'></script>
+
 {{! search bar }}
-<section class='is-full'>
+{{!-- <section class='is-full'>
   <div class='reviews-page'>
     <div class='is-6'>
       <nav class='navbar is-link'>
@@ -31,13 +61,13 @@
           Game Title:
           {{title}}"
         </p>
-      </header>
-      {{!-- <div class='card-image'>
+      </header> --}}
+{{! <div class='card-image'>
         <figure class='image is-128x128'>
           <img id='game-image' src='...' alt='...' />
         </figure>
-      </div> --}}
-      <div class='card content'>
+      </div> }}
+{{!-- <div class='card content'>
         <h6 id='realeased'></h6>
         <h6 id='metacritic'></h6>
         <p class='card-text' id='gameDescription'>Description:
@@ -79,4 +109,4 @@
     </div>
   </div>
 </section>
-<script src="/js/review.js"></script>
+<script src="/js/review.js"></script> --}}
