added profile route, fixed login/signup.js, added dummy username to profile page, you now signup/login

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,7 @@
 
 <div class="row mt-4">
   {{#if Review.length}}
-  <div class="col-md-6 project-list">
+  <div class="col-md-6 review-list">
     <h3>Current Reviews:</h3>
 
     {{#each Review as |Review|}}
@@ -23,6 +23,6 @@
   {{/if}}
 </div>
 
-<script src="../public/js/profile.js"></script>
-<script src="../public/js/review.js"></script>
+<script src="./js/profile.js"></script>
+<script src="./js/review.js"></script>
 
