--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,9 @@
+<nav class = "navbar">
+   <ul class="flex-row">
+            <li class="li-inline nav-item"><a href="/">Home</a></li>
+            <li class="li-inline nav-item"><a href="#" id="logout">Logout</a></li>
+        </ul>
+</nav> 
 <div class="row">
   <div class="col-auto">
     <h2>Welcome, {{name}}!</h2>
@@ -5,6 +11,7 @@
 </div>
 
 <div class="row mt-4">
+  <button class="button is-danger" id="btn-add-review"><a href="/new-review">➕New Review</a></button>
   {{#if Review.length}}
   <div class="col-md-6 review-list">
     <h3>Current Reviews:</h3>
@@ -22,7 +29,7 @@
   </div>
   {{/if}}
 </div>
-
+<script src="./js/logout.js"></script>
 <script src="./js/profile.js"></script>
-<script src="./js/review.js"></script>
+<script src="./js/new-review.js"></script>
 
