--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,23 @@
         {{else}}
         <a href="/login">login</a>
         {{/if}}
+
+<form method="get" class='form-inline searchForm'>
+          <input
+            name="search"
+            class='input is-info'
+            type='search'
+            placeholder='Search a game!'
+            aria-label='Search'
+            id='searchInput'
+          />
+          <button
+            class='button is-danger is-rounded is-normal is-responsive'
+            id='searchBtn'
+            type='submit'
+          >Search</button>
+        </form>
+
       </nav>
     </header>
     <main class="container container-fluid mt-5">
