--- a/views/new-review.handlebars
+++ b/views/new-review.handlebars
@@ -5,7 +5,7 @@
   <form class='form new-review-form'>
     <div class='form-group'>
       <label for='game_title'>Game Title:</label>
-      <input class='form-input' type='text' id='game_title' name='game_title' />
+      <input class='form-input' type='text' id='game_title' />
     </div>
     <div class='form-group'>
       <label for='user_score'>Rating:</label>
@@ -13,20 +13,19 @@
         class='form-input'
         type='number'
         id='user_score'
-        name='user_score'
       />
     </div>
     <div class='form-group'>
       <label for='Review'>Review:</label>
-      <textarea class='form-input' id='Review' name='Review'></textarea>
+      <textarea class='form-input' id='review'></textarea>
     </div>
-    <div class='form-group'>
+    <div class='create'>
       <button type='submit' class='button is-danger'>Create</button>
     </div>
   </form>
 </div>
 
-<script src='/js/new-review.js'></script>
+<script src='./js/new-review.js'></script>
 
 {{! search bar }}
 {{!-- <section class='is-full'>
