--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,9 +10,8 @@
     <h2>Welcome, {{User.user_name}}!</h2>
   </div>
 </div>
-<button class="button is-danger" id="new-review"> <a href="/new">Create Review</a></button>
 <div class="row mt-4">
-  <button class="button is-danger" id="btn-add-review"><a href="/new-review">➕New Review</a></button>
+  <button class="button is-danger" id="btn-add-review"><a href="/new">➕New Review</a></button>
   {{#if Review.length}}
   <div class="col-md-6 review-list">
     <h3>Current Reviews:</h3>
@@ -30,16 +29,7 @@
   </div>
   {{/if}}
 </div>
-<<<<<<< HEAD
-
-
-
-<script src="./js/profile.js"></script>
-<script src="./js/logout.js"></script>
-<script src="./js/review.js"></script>
-=======
 <script src="./js/logout.js"></script>
 <script src="./js/profile.js"></script>
 <script src="./js/new-review.js"></script>
->>>>>>> origin
 
