--- a/views/all-reviews.handlebars
+++ b/views/all-reviews.handlebars
@@ -1,6 +1,7 @@
 <div class='container reviews' id='all-reviews-page'>
   <h1> View All Posted Reviews Here!</h1>
-  {{#each reviews as |review|}}
+  {{!-- {{#each reviews as |review|}} --}}
+  {{#each reviews}}
     <div class='card review-cards'>
       <div class='card-header'>
         <h2 class='title is-4'>
@@ -8,9 +9,9 @@
         </h2>
         <div>
           Posted by
-          {{#each users as |user|}}
-          {{user_name}}
-          {{/each}}
+          {{!-- {{#each users as |user|}} --}}
+          {{user_id}}
+          {{!-- {{/each}} --}}
           on
           {{ date_created}}
           user score: {{user_score}}
