--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -30,7 +30,7 @@
       <center>{{game.name}}</center>
       {{game.released}}
     {{{game.description}}}
-    <a href="#close">Close Modal</a>
+    <a href="#close">Close</a>
     
     </div>  
 </div>     
