--- a/views/all-reviews.handlebars
+++ b/views/all-reviews.handlebars
@@ -1,24 +1,21 @@
 <div class='container reviews' id='all-reviews-page'>
   <h1> View All Posted Reviews Here!</h1>
-  {{!-- {{#each reviews as |review|}} --}}
-  {{#each reviews}}
+  {{#each reviews as |Review|}}
     <div class='card review-cards'>
       <div class='card-header'>
         <h2 class='title is-4'>
-          <a href='/review/{{id}}'>{{game_title}}</a>
+          {{game_title}}
         </h2>
         <div>
           Posted by
-          {{!-- {{#each users as |user|}} --}}
           {{user_id}}
-          {{!-- {{/each}} --}}
           on
-          {{ date_created}}
+          {{date_created}}
           user score: {{user_score}}
         </div>
       </div>
       <div class='card-content'>
-        <p> Review: {{reviews}} </p>
+        <p> Review: {{review}} </p>
       </div>
     </div>
   {{/each}}
