--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,35 +1,40 @@
-<nav class = "navbar">
-   <ul class="flex-row">
-            <li class="li-inline nav-item"><a href="/">Home</a></li>
-            <li class="li-inline nav-item"><a href="#" id="logout">Logout</a></li>
-        </ul>
-</nav> 
-<div class="row">
-  <button class="logout" id="logout"><a href="#">Logout</a></button>
-  <div class="col-auto">
+<nav class='navbar'>
+  <ul class='flex-row'>
+    <li class='li-inline nav-item'><a href='/'>Home</a></li>
+    <li class='li-inline nav-item'><a href='#' id='logout'>Logout</a></li>
+  </ul>
+</nav>
+<div class='row'>
+  <button class='logout' id='logout'><a href='#'>Logout</a></button>
+  <div class='col-auto'>
     <h2>Welcome, {{User.user_name}}!</h2>
   </div>
 </div>
-<div class="row mt-4">
-  <button class="button is-danger" id="btn-add-review"><a href="/new">➕New Review</a></button>
+<div class='row mt-4'>
+  <button class='button is-danger' id='btn-add-review'><a href='/new'>➕New
+      Review</a></button>
   {{#if Review.length}}
-  <div class="col-md-6 review-list">
-    <h3>Current Reviews:</h3>
+    <div class='col-md-6 review-list'>
+      <h3>Current Reviews:</h3>
 
-    {{#each Review as |Review|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/review/{{Review.id}}">{{Review.review}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger delete-review" data-id="{{Review.id}}">DELETE</button>
-      </div>
+      {{#each reviews as |Review|}}
+        <div class='review-list'>
+          <div class='row mb-2'>
+            <div class='col-md-8'>
+              <h4><a href='/review/{{id}}'>{{game_title}}</a></h4>
+            </div>
+            <div class='col-md-4'>
+              <button
+                class='btn btn-sm btn-danger delete-review'
+                data-id='{{id}}'
+              >DELETE</button>
+            </div>
+          </div>
+        </div>
+      {{/each}}
     </div>
-    {{/each}}
-  </div>
   {{/if}}
 </div>
-<script src="./js/logout.js"></script>
-<script src="./js/profile.js"></script>
-<script src="./js/new-review.js"></script>
-
+<script src='./js/logout.js'></script>
+<script src='./js/profile.js'></script>
+<script src='./js/new-review.js'></script>
