--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+<div>
+  <div>
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -16,9 +16,8 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+  <div>
     <h2>Signup</h2>
-
     <form class="form signup-form">
       <div class="form-group">
         <label for="name-signup">name:</label>
