--- a/views/new-review.handlebars
+++ b/views/new-review.handlebars
@@ -1,34 +1,5 @@
-<div class='container review-container'>
-  <div class='notification is-info' id='create-title'>
-    <h2> Add a Review! </h2>
-  </div>
-  <form class='form new-review-form'>
-    <div class='form-group'>
-      <label for='game_title'>Game Title:</label>
-      <input class='form-input' type='text' id='game_title' />
-    </div>
-    <div class='form-group'>
-      <label for='user_score'>Rating:</label>
-      <input
-        class='form-input'
-        type='number'
-        id='user_score'
-      />
-    </div>
-    <div class='form-group'>
-      <label for='Review'>Review:</label>
-      <textarea class='form-input' id='review'></textarea>
-    </div>
-    <div class='create'>
-      <button type='submit' class='button is-danger'>Create</button>
-    </div>
-  </form>
-</div>
-
-<script src='./js/new-review.js'></script>
-
 {{! search bar }}
-{{!-- <section class='is-full'>
+<section class='is-full'>
   <div class='reviews-page'>
     <div class='is-6'>
       <nav class='navbar is-link'>
@@ -50,7 +21,7 @@
     </div>
 
     {{! game card with description }}
-    <div class='card' id="gameCard">
+    <div class='card' id='gameCard'>
       <header class='card-header'>
         <p
           class='card-header-title game-title'
@@ -58,54 +29,46 @@
           data-slug='{{slug}}'
         >
           Game Title:
-          {{title}}"
+          {{game_title}}"
         </p>
-      </header> --}}
-{{! <div class='card-image'>
+      </header>
+      <div class='card-image'>
         <figure class='image is-128x128'>
           <img id='game-image' src='...' alt='...' />
         </figure>
-      </div> }}
-{{!-- <div class='card content'>
+      </div>
+      <div class='card content'>
         <h6 id='realeased'></h6>
         <h6 id='metacritic'></h6>
         <p class='card-text' id='gameDescription'>Description:
-          {{{game_description}}}</p>
+          {{{description}}}</p>
       </div>
     </div>
 
-    {{! review form }}
-    <div class='col-md-6'>
-      <h3>Create a Review:</h3>
 
-      <form class='form new-project-form'>
+    <div class='container review-container'>
+      <div class='notification is-info' id='create-title'>
+        <h2> Add a Review! </h2>
+      </div>
+      <form class='form new-review-form'>
         <div class='form-group'>
           <label for='game_title'>Game Title:</label>
-          <input
-            class='form-input'
-            type='text'
-            id='game_title'
-            name='game_title'
-          />
+          <input class='form-input' type='text' id='game_title' />
         </div>
         <div class='form-group'>
           <label for='user_score'>Rating:</label>
-          <input
-            class='form-input'
-            type='number'
-            id='user_score'
-            name='user_score'
-          />
+          <input class='form-input' type='number' id='user_score' />
         </div>
         <div class='form-group'>
           <label for='Review'>Review:</label>
-          <textarea class='form-input' id='Review' name='Review'></textarea>
+          <textarea class='form-input' id='review'></textarea>
         </div>
-        <div class='form-group'>
-          <button type='submit' class='btn btn-primary'>Create</button>
+        <div class='create'>
+          <button type='submit' class='button is-danger'>Create</button>
         </div>
       </form>
     </div>
+
   </div>
 </section>
-<script src="/js/review.js"></script> --}}
+<script src='./js/new-review.js'></script>
