--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,6 @@
-<div>
-  <div>
+<div class="login">
+  <div class="loginForm">
     <h2>Login</h2>
-
     <form class="form login-form">
       <div class="form-group">
         <label for="email-login">email:</label>
@@ -16,7 +15,7 @@
       </div>
     </form>
   </div>
-  <div>
+  <div class="loginForm">
     <h2>Signup</h2>
     <form class="form signup-form">
       <div class="form-group">
