--- a/views/all-reviews.handlebars
+++ b/views/all-reviews.handlebars
@@ -10,7 +10,7 @@
           Posted by
           {{user_id}}
           on
-          {{date_created}}
+          {{format_date date_created}}
           user score: {{user_score}}
         </div>
       </div>
