--- a/views/all-reviews.handlebars
+++ b/views/all-reviews.handlebars
@@ -1,4 +1,4 @@
-<div class='container reviews' id='all-reviews-page'>
+<div class="allReviews"class='container reviews' id='all-reviews-page'>
   <h1> View All Posted Reviews Here!</h1>
   {{#each reviews as |Review|}}
     <div class='card review-cards'>
