--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,9 +20,9 @@
     
       <p> Released: {{game.released}} </p>  
 
-      <a href="#container_{{game.id}}">Click for description!</a>
+      <a class="linkColor" href="#container_{{game.id}}">Click for description!</a>
         <br></br>
-      <a href="/review">Checkout some reviews!</a>
+      <a class="linkColor" href="/review">Checkout some reviews!</a>
       
 <div class="modal-container" id="container_{{game.id}}">
     <div id="exampleModal" class="reveal-modal">
