--- a/views/new-review.handlebars
+++ b/views/new-review.handlebars
@@ -1,5 +1,5 @@
-<div class='container review-container'>
-  <div class='notification is-info' id='create-title'>
+<div class='login'>
+  <div class='newReviewHeader' id='create-title'>
     <h2> Add a Review! </h2>
   </div>
   <form class='form new-review-form'>
@@ -20,7 +20,7 @@
       <textarea class='form-input' id='review'></textarea>
     </div>
     <div class='create'>
-      <button type='submit' class='button is-danger'>Create</button>
+      <button type='submit' class='searchBtn'>Create</button>
     </div>
   </form>
 </div>
