--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -2,14 +2,16 @@
 .game-cards {
 
   border: 3px rgb(165, 143, 211) solid;
-  border-radius: 5%;
+  border-radius: 10px;
   margin: 15px;
   padding: 15px;
   width: 200px;
   display: inline-flex;
   flex-wrap: wrap;
   color: rgb(105, 64, 180);
-  background-color: rgb(232, 232, 232); 
+  box-shadow: 0 0 5px rgb(238, 136, 238),
+               0 0 15px rgb(238, 136, 238);
+  background-color: black; 
 }
 
 .has-ration {
