--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,7 +6,7 @@
 </nav>
 <div class='row'>
   <div class='welcomeDude'>
-    <h2>Welcome, {{User.user_name}}!</h2>
+    <h2>Welcome!</h2>
   </div>
 </div>
 <div class='welcomeDude'>
