username shows on reviews instead of user_id

--- a/views/single-review.handlebars
+++ b/views/single-review.handlebars
@@ -3,7 +3,7 @@
         <div class="card-header review-title">
             <h2>{{game-title}}</h2>
             <div>
-                Posted by {{review.User.username}} on {{review.date_created}}
+                Posted by {{user.user_name}} on {{format_date date_created}}
             </div>
         </div>
         <div class="card-content">
