--- a/views/all-reviews.handlebars
+++ b/views/all-reviews.handlebars
@@ -8,7 +8,7 @@
         </h2>
         <div>
           Posted by
-          {{user_id}}
+          {{user.user_name}}
           on
           {{format_date date_created}}
           user score: {{user_score}}
